--- a/Project JS2/css/style.css
+++ b/Project JS2/css/style.css
@@ -1,124 +1,48 @@
-.container {
-    max-width: 1180px;
+#container {
+    max-width: 1550px;
+    min-width: 960px;
+    text-align: center;
     margin: 0 auto;
 }
 
-.menu {
-    width: 1170px;
-    height: 40px;
-    margin: 5px;
-}
-
-.top-menu {
-    background: rgba(255, 255, 255, .5);
-    box-shadow: 3px 0 7px rgba(0, 0, 0, .3);
-    padding: 20px;
-    float: none;
-}
-
-.top-menu:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-.navbar-logo {
-    display: inline-block;
+.nav {
+    display: flex;
+    background-color: darkgray;
+    align-items: center;
+    justify-content: center;
+    color: #fafafa;
+    min-height: 60px;
 }
 
 .menu-main {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    float: left;
-    margin-left: 40%;
-}
-
-.menu-main li {
-    display: inline-block;
+    flex: 0 1 60%;
+    text-align: center;
 }
 
 .menu-main a {
+    text-transform: uppercase;
+    padding: 40px;
+    font-size: 16px;
     text-decoration: none;
-    display: block;
-    position: relative;
-    line-height: 61px;
-    padding-left: 40px;
-    font-size: 18px;
-    letter-spacing: 2px;
-    font-family: 'Arimo', sans-serif;
-    font-weight: bold;
     color: black;
-    transition: .3s linear;
+    font-weight: bold;
 }
 
-.menu-main a:before {
-    content: "";
-    width: 9px;
-    height: 9px;
-    background: black;
-    position: absolute;
-    left: 50%;
-    transform: rotate(45deg) translateX(6.5px);
-    opacity: 0;
-    transition: .3s linear;
+.search-form {
+    flex: 0 1 20%;
 }
 
-.menu-main a:hover:before {
-    opacity: 1;
+.btn-search {
+    flex: 0 1 20%;
 }
 
 .btn-cart {
-    position: relative;
-    margin-top: 13px;
-    font-weight: 700;
-    color: black;
-    text-decoration: none;
-    padding: 4px;
-    border-radius: 3px;
-    background: gray;
-    font-size: 18px;
-    letter-spacing: 2px;
-    float: right;
-}
-
-.btn-cart:hover {
-    background: darkgrey;
-}
-
-/*.products {*/
-/*    display: flex;*/
-/*    margin: 20px -10px;*/
-/*}*/
-
-.product-item {
-    padding: 0 10px;
-    flex: 0 1 25%;
-    display: flex;
-    flex-direction: column;
-}
-
-.title {
-    font-weight: bold;
-    font-size: 30px;
-    text-align: center;
-    margin-bottom: 10px;
-}
-
-.price {
-    text-align: center;
     font-weight: bold;
     font-size: 18px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    border: 3px solid black;
 }
 
-.by-btn {
-    width: 50%;
-    margin: 0 auto;
-}
-
-.products{
+.products {
     column-gap: 30px;
     display: grid;
     grid-template-columns: repeat(auto-fit, 200px);
@@ -126,10 +50,12 @@
     padding: 40px 80px;
     justify-content: space-between;
 }
+
 p {
     margin: 0 0 5px 0;
 }
-.product-item{
+
+.product-item {
     display: flex;
     flex-direction: column;
     width: 200px;
@@ -137,23 +63,27 @@ p {
     overflow: hidden;
     margin: 20px 0;
 }
+
 img {
     max-width: 100%;
     height: auto
 }
+
 .desc {
     border: 1px solid #c0c0c040;
     padding: 15px
 }
-.cart{
+
+.cart {
     position: relative;
 }
-.cart-block{
+
+.cart-block {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
     border-radius: 5px;
     box-sizing: border-box;
-    right: -10px;
-    top: 50px;
+    right: 6%;
+    top: 9%;
     position: absolute;
     background-color: white;
     padding: 20px;
@@ -161,11 +91,23 @@ img {
     width: 300px;
 }
 
-.invisible{
+.invisible {
     display: none;
 }
 
-.buy-btn, .del-btn{
+.cart-block:before {
+    content: '';
+    width: 0;
+    height: 0;
+    position: absolute;
+    top: -10px;
+    right: 35px;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 10px solid white;
+}
+
+.buy-btn, .del-btn {
     margin-top: 5px;
     background-color: #2f2a2d;
     padding: 5px 15px;
@@ -175,66 +117,79 @@ img {
     transition: all ease-in-out .4s;
     cursor: pointer;
 }
-.buy-btn:hover, .del-btn:hover{
+
+.buy-btn:hover, .del-btn:hover {
     background-color: #fafafa;
     color: #2f2a2d;
     border: 1px solid #2f2a2d;
 }
+
 .cart-item {
     display: flex;
     justify-content: space-between;
 }
-.cart-item:not(:last-child){
+
+.cart-item:not(:last-child) {
     margin-bottom: 20px;
 }
-.product-bio{
+
+.product-bio {
     display: flex;
 }
-.cart-item img{
+
+.cart-item img {
     align-self: flex-start;
     margin-right: 15px;
 }
-.product-single-price{
+
+.product-single-price {
     color: #474747;
     font-size: 0.5em;
 }
-.product-price{
+
+.product-price {
     margin-left: 30px;
 }
-.product-desc{
+
+.product-desc {
     max-width: 150px;
 }
+
 .product-quantity {
     margin-top: 15px;
     font-size: 0.75em;
 }
-.right-block{
+
+.right-block {
     text-align: right;
 }
+
 .btn-search {
     background-color: transparent;
     border: none;
-    color: #fafafa;
+    color: black;
     font-size: 1.2em;
     position: absolute;
     bottom: 5px;
     right: 0;
 }
-.search-form{
+
+.search-form {
     position: relative;
     margin-right: 50px;
     display: inline-block;
 }
-.search-field:focus{
+
+.search-field:focus {
     outline: none;
 }
+
 .search-field {
     box-sizing: border-box;
     width: 200px;
-    color: #fafafa;
+    color: black;
     padding: 10px;
     background-color: transparent;
     border: none;
-    border-bottom: 2px solid #fafafa;
+    border-bottom: 2px solid black;
 }
-
