--- a/Project JS2/css/style.css
+++ b/Project JS2/css/style.css
@@ -36,7 +36,7 @@
     flex: 0 1 20%;
 }
 
-.btn-cart {
+.btn-basket {
     font-weight: bold;
     font-size: 18px;
     border: 3px solid black;
@@ -74,16 +74,17 @@ img {
     padding: 15px
 }
 
-.cart {
+.basket {
+    display: flex;
     position: relative;
 }
 
-.cart-block {
+.basket-block {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
     border-radius: 5px;
     box-sizing: border-box;
-    right: 6%;
-    top: 9%;
+    top: 30px;
+    right: -13px;
     position: absolute;
     background-color: white;
     padding: 20px;
@@ -95,7 +96,7 @@ img {
     display: none;
 }
 
-.cart-block:before {
+.basket-block:before {
     content: '';
     width: 0;
     height: 0;
@@ -124,12 +125,12 @@ img {
     border: 1px solid #2f2a2d;
 }
 
-.cart-item {
+.basket-item {
     display: flex;
     justify-content: space-between;
 }
 
-.cart-item:not(:last-child) {
+.basket-item:not(:last-child) {
     margin-bottom: 20px;
 }
 
@@ -137,7 +138,7 @@ img {
     display: flex;
 }
 
-.cart-item img {
+.basket-item img {
     align-self: flex-start;
     margin-right: 15px;
 }
@@ -192,4 +193,33 @@ img {
     background-color: transparent;
     border: none;
     border-bottom: 2px solid black;
+}
+
+.error-msg {
+    padding: 30px 20px;
+    background-color: red;
+    color: white;
+    position: relative;
+}
+
+.error-block {
+    background-color: rgba(0, 0, 0, .5);
+    justify-content: center;
+    display: flex;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+}
+
+.close-btn {
+    font-size: 1.5em;
+    top: -40px;
+    position: absolute;
+    right: 0;
+    background: none;
+    border: none;
+    color: white;
+    font-weight: bold;
 }
