--- a/Project JS2/public/css/style.css
+++ b/Project JS2/public/css/style.css
@@ -1,48 +1,45 @@
-#container {
-    max-width: 1550px;
-    min-width: 960px;
-    text-align: center;
-    margin: 0 auto;
+body{
+    font-family: 'SF Pro Display', sans-serif;
 }
-
-.nav {
+header{
     display: flex;
-    background-color: darkgray;
-    align-items: center;
-    justify-content: center;
+    background-color: #2f2a2d;
+    justify-content: space-between;
     color: #fafafa;
-    min-height: 60px;
+    padding: 30px 80px;
 }
-
-.menu-main {
-    flex: 0 1 60%;
-    text-align: center;
+button:focus{
+    outline: none;
 }
+.logo{
 
-.menu-main a {
     text-transform: uppercase;
-    padding: 40px;
-    font-size: 16px;
-    text-decoration: none;
-    color: black;
     font-weight: bold;
 }
-
-.search-form {
-    flex: 0 1 20%;
+.btn-cart{
+    background-color: #fafafa;
+    padding: 10px 20px;
+    border: 1px solid transparent;
+    color: #2f2a2d;
+    border-radius: 5px;
+    transition: all ease-in-out .4s;
+    cursor: pointer;
 }
-
-.btn-search {
-    flex: 0 1 20%;
+.btn-cart:hover{
+    background-color: transparent;
+    border-color: #fafafa;
+    color: #fafafa;
 }
-
-.btn-basket {
-    font-weight: bold;
-    font-size: 18px;
-    border: 3px solid black;
+.btn-cart, .logo{
+    align-self: center;
 }
-
-.products {
+/*.products {*/
+/*display: flex;*/
+/*justify-content: space-between;*/
+/*flex-wrap: wrap;*/
+/*padding: 40px 80px;*/
+/*}*/
+.products{
     column-gap: 30px;
     display: grid;
     grid-template-columns: repeat(auto-fit, 200px);
@@ -50,12 +47,10 @@
     padding: 40px 80px;
     justify-content: space-between;
 }
-
 p {
     margin: 0 0 5px 0;
 }
-
-.product-item {
+.product-item{
     display: flex;
     flex-direction: column;
     width: 200px;
@@ -63,28 +58,24 @@ p {
     overflow: hidden;
     margin: 20px 0;
 }
-
 img {
     max-width: 100%;
     height: auto
 }
-
 .desc {
     border: 1px solid #c0c0c040;
     padding: 15px
 }
-
-.basket {
+.cart{
     display: flex;
     position: relative;
 }
-
-.basket-block {
+.cart-block{
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
     border-radius: 5px;
     box-sizing: border-box;
-    top: 30px;
-    right: -13px;
+    right: 0;
+    top: 130%;
     position: absolute;
     background-color: white;
     padding: 20px;
@@ -92,11 +83,10 @@ img {
     width: 300px;
 }
 
-.invisible {
+.invisible{
     display: none;
 }
-
-.basket-block:before {
+.cart-block:before{
     content: '';
     width: 0;
     height: 0;
@@ -108,7 +98,7 @@ img {
     border-bottom: 10px solid white;
 }
 
-.buy-btn, .del-btn {
+.buy-btn, .del-btn{
     margin-top: 5px;
     background-color: #2f2a2d;
     padding: 5px 15px;
@@ -118,92 +108,76 @@ img {
     transition: all ease-in-out .4s;
     cursor: pointer;
 }
-
-.buy-btn:hover, .del-btn:hover {
+.buy-btn:hover, .del-btn:hover{
     background-color: #fafafa;
     color: #2f2a2d;
     border: 1px solid #2f2a2d;
 }
-
-.basket-item {
+.cart-item {
     display: flex;
     justify-content: space-between;
 }
-
-.basket-item:not(:last-child) {
+.cart-item:not(:last-child){
     margin-bottom: 20px;
 }
-
-.product-bio {
+.product-bio{
     display: flex;
 }
-
-.basket-item img {
+.cart-item img{
     align-self: flex-start;
     margin-right: 15px;
 }
-
-.product-single-price {
+.product-single-price{
     color: #474747;
     font-size: 0.5em;
 }
-
-.product-price {
+.product-price{
     margin-left: 30px;
 }
-
-.product-desc {
+.product-desc{
     max-width: 150px;
 }
-
 .product-quantity {
     margin-top: 15px;
     font-size: 0.75em;
 }
-
-.right-block {
+.right-block{
     text-align: right;
 }
-
 .btn-search {
     background-color: transparent;
     border: none;
-    color: black;
+    color: #fafafa;
     font-size: 1.2em;
     position: absolute;
     bottom: 5px;
     right: 0;
 }
-
-.search-form {
+.search-form{
     position: relative;
     margin-right: 50px;
     display: inline-block;
 }
-
-.search-field:focus {
+.search-field:focus{
     outline: none;
 }
-
 .search-field {
     box-sizing: border-box;
     width: 200px;
-    color: black;
+    color: #fafafa;
     padding: 10px;
     background-color: transparent;
     border: none;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid #fafafa;
 }
-
 .error-msg {
     padding: 30px 20px;
     background-color: red;
     color: white;
     position: relative;
 }
-
 .error-block {
-    background-color: rgba(0, 0, 0, .5);
+    background-color: rgba(0,0,0, .5);
     justify-content: center;
     display: flex;
     position: absolute;
@@ -212,7 +186,6 @@ img {
     height: 100%;
     align-items: center;
 }
-
 .close-btn {
     font-size: 1.5em;
     top: -40px;
